# triageguard

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.wolfssl  LICENSE  PROJECT_BRIEF.md  README.md  STATE.md  WRITTEN_SUMMARY.md  pyproject.toml
.claude/: RULES.md  settings.json
.claude/agents/: demo-rehearser.md  security-reviewer.md  simplify-reviewer.md
.claude/commands/: demo-dryrun.md  opus-audit.md  record-finding.md  run-sample.md  ship-check.md  status.md  verify-done.md
.claude/hooks/: guard-destructive-git.sh  session-start.sh  statusline.sh
.claude/prompts/: agent-a-reproducibility.md  agent-b-root-cause.md  agent-c-duplicate.md  agent-d-hallucination.md  synthesizer-reasoning.md  synthesizer.md
.claude/rules/: git-workflow.md
agents/: __init__.py
agents/duplicate/: __init__.py  __main__.py  agent.py  cli.py  prompt.py  tools.py
agents/hallucination/: __init__.py  __main__.py  agent.py  cli.py  prompt.py  tools.py
agents/reproducibility/: __init__.py  __main__.py  agent.py  cli.py  prompt.py  tools.py
agents/root_cause/: __init__.py  __main__.py  agent.py  cli.py  prompt.py  tools.py
demo/: VIDEO_SCRIPT.md  architecture.excalidraw
demo-inputs/s1-cve-2026-3849/: INPUT.md  (+1 more)
orchestrator/: __init__.py  __main__.py  confidence.py  findings.py  nvd_client.py  preflight.py  reasoning.py  run.py  schemas.py  synthesizer.py
scripts/: generate_slop.py  regenerate_narrative.py
tests/: test_confidence.py  test_preflight.py  test_reproducibility.py  test_root_cause.py  test_synthesizer.py
web/: .gitignore  package.json  pnpm-lock.yaml
(+28 files in other folders)
