[project]
name = "triageguard"
version = "0.1.0"
description = "Autonomous validator for vulnerability reports — Signal vs. Slop."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Haruto Kimura", email = "harutokimura0608@gmail.com" }]

dependencies = [
    "claude-agent-sdk>=0.1.0",
    "anthropic>=0.40.0",
    "pydantic>=2.9.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "rich>=13.9.0",
    "openai>=1.50.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[project.scripts]
triageguard = "orchestrator.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orchestrator", "agents"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
